--- a/styles.css
+++ b/styles.css
@@ -441,6 +441,7 @@ button:hover {
     font-size: 1.7rem;
     line-height: 1.3;
     margin-bottom: 2rem;
+    color: var(--black);
 }
 
 .footer .box-container .box h3 {
